--- a/english-tennis.html
+++ b/english-tennis.html
@@ -12,21 +12,42 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
-      background: #f7f7f7;
+      margin: 0;
+      background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+        url('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Clay_tennis_court.jpg/1280px-Clay_tennis_court.jpg') no-repeat center center / cover;
+      color: white;
+      text-align: center;
+      padding: 20px;
     }
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 20px;
+    }
+
     #spinner {
       font-size: 1.5em;
       margin: 30px;
       padding: 20px;
-      border: 2px dashed #666;
-      background: white;
-      max-width: 80%;
-      text-align: center;
+      border: 2px dashed white;
+      background: rgba(255, 255, 255, 0.2);
+      max-width: 90%;
+      border-radius: 12px;
     }
     button {
       font-size: 1.2em;
-      padding: 10px 20px;
-      cursor: pointer;
+      padding: 12px 30px;
+      border: none;
+      border-radius: 30px;
+      background: linear-gradient(135deg, #00c853, #64dd17);
+      color: white;
+      font-weight: bold;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+      transition: all 0.3s ease;
+    }
+
+    button:hover {
+      background: linear-gradient(135deg, #64dd17, #00c853);
+      transform: scale(1.05);
     }
   </style>
 </head>
