--- a/english-tennis.html
+++ b/english-tennis.html
@@ -14,7 +14,7 @@
       height: 100vh;
       margin: 0;
       background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-        url('https://upload.wikimedia.org/wikipedia/commons/thumb/e/e7/Clay_tennis_court.jpg/1280px-Clay_tennis_court.jpg') no-repeat center center / cover;
+        url('https://github.com/Outreach360-Inc/games/blob/main/athletes-1866487_1920.jpg?raw=true') no-repeat center center / cover;
       color: white;
       text-align: center;
       padding: 20px;
