--- a/hh1u6-games.html
+++ b/hh1u6-games.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>HH1 Unit 6 Games</title>
+<title🃏 HH1 Unit 6 Games</title>
 <style>
     html, body {
       margin: 0;
