--- a/hh2u12-games.html
+++ b/hh2u12-games.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>HH2 Unit 12 Game Hub</title>
+<title>🃏 HH2 Unit 12 Game Hub</title>
 <style>
     html, body {
       margin: 0;
