--- a/hh2u5-games.html
+++ b/hh2u5-games.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HH2 Unit 5 Game Hub</title>
+  <title>🃏 HH2 Unit 5 Game Hub</title>
   <style>
     html, body {
       margin: 0;
