--- a/hh3u1-games.html
+++ b/hh3u1-games.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>HH3 Unit 1 Game Hub</title>
+<title>🃏 HH3 Unit 1 Game Hub</title>
 <style>
     html, body {
       margin: 0;
