--- a/hh4u8-games.html
+++ b/hh4u8-games.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>HH4 Unit 8 Games</title>
+<title>🃏 HH4 Unit 8 Games</title>
 <style>
     html, body {
       margin: 0;
