--- a/hh5u10-games.html
+++ b/hh5u10-games.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>HH5 Unit 10 Games</title>
+<title>🃏 HH5 Unit 10 Games</title>
 <style>
     html, body {
       margin: 0;
