--- a/hh6u5-games.html
+++ b/hh6u5-games.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>HH6 Unit 5 Games</title>
+<title>🃏 HH6 Unit 5 Games</title>
 <style>
     html, body {
       margin: 0;
