--- a/hhgames.html
+++ b/hhgames.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset='UTF-8'>
-  <title>HH Games by Level</title>
+  <title>🃏 HH Games by Level</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; background: #f9f9f9; }
     h1 { text-align: center; margin-bottom: 40px; }
