--- a/hh4u7-12-review.html
+++ b/hh4u7-12-review.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>HH4 Units 7-12 Review Game</title>
+  <title>✨ HH4 Units 7-12 Review Game</title>
   <style>
     body {
       font-family: sans-serif;
