--- a/hh6u1-6-review.html
+++ b/hh6u1-6-review.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>HH6 Units 1-6 Review Game</title>
+  <title>✨ HH6 Units 1-6 Review Game</title>
   <style>
     body {
       font-family: sans-serif;
