--- a/hh1u9-12-bingo.html
+++ b/hh1u9-12-bingo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HH1 Units 9-12 Bingo</title>
+    <title>🅱️ HH1 Units 9-12 Bingo</title>
     <style>
         body {
             font-family: Arial, sans-serif;
