--- a/hh2u5-8-bingo.html
+++ b/hh2u5-8-bingo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HH2 Units 5-8 Bingo</title>
+    <title>🅱️ HH2 Units 5-8 Bingo</title>
     <style>
         body {
             font-family: Arial, sans-serif;
