--- a/hh4u9-12-bingo.html
+++ b/hh4u9-12-bingo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HH4 Units 9-12 Bingo</title>
+    <title>🅱️ HH4 Units 9-12 Bingo</title>
     <style>
         * {
             box-sizing: border-box;
