--- a/hh6u1-4-bingo.html
+++ b/hh6u1-4-bingo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>HH6 Units 1-4 Bingo</title>
+    <title>🅱️ HH6 Units 1-4 Bingo</title>
     <style>
         * {
             box-sizing: border-box;
