--- a/hh3u5-8-spinner.html
+++ b/hh3u5-8-spinner.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HH3 Units 5-8 Bingo Spinner</title>
+  <title>🔴 HH3 Units 5-8 Bingo Spinner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
