--- a/hh3u9-12-spinner.html
+++ b/hh3u9-12-spinner.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HH3 Units 9–12 Bingo Spinner</title>
+  <title>🔴 HH3 Units 9–12 Bingo Spinner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
