--- a/hh6u9-12-spinner.html
+++ b/hh6u9-12-spinner.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>HH6 Units 9-12 Bingo Spinner</title>
+  <title>🔴 HH6 Units 9-12 Bingo Spinner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
