--- a/story-cubes1.html
+++ b/story-cubes1.html
@@ -57,7 +57,7 @@
       cursor: pointer;
     }
     /* Modal styles */
-    .modal {
+       .modal {
       display: none;
       position: fixed;
       z-index: 999;
@@ -69,7 +69,7 @@
       background-color: rgba(0, 0, 0, 0.8);
     }
     .modal-content {
-      background-color: #222;
+      background-color: #ffffff;
       margin: 10% auto;
       padding: 20px;
       border-radius: 12px;
@@ -87,10 +87,10 @@
       font-weight: bold;
       line-height: 1.4em;
       padding: 20px 10px;
-      color: white;
+      color: black;
     }
     .close {
-      color: #fff;
+      color: black;
       float: right;
       font-size: 28px;
       font-weight: bold;
