--- a/what-do.html
+++ b/what-do.html
@@ -52,9 +52,9 @@
 <body>
   <div class="box">
     <h1>What Would You Do?</h1>
-    <div id="prompt">Click the button to get a question.</div>
+    <div id="prompt">Click the button to get a prompt.</div>
     <div id="answer"></div>
-    <button onclick="spinQuestion()">Spin Question</button>
+    <button onclick="spinQuestion()">Spin Prompt</button>
     <button onclick="showAnswer()">Show Example Answer</button>
   </div>
 
