Update and rename picture-party.html to picture-party2.html

--- a/picture-party2.html
+++ b/picture-party2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Picture Party</title>
+  <title>Picture Party 2</title>
   <style>
 
 /* Enlarge stage ONLY when a webpage (iframe) is active */
@@ -158,7 +158,7 @@
 <body>
   <div class="wrap">
     <div class="header-row">
-      <h1>🎉 Picture Party</h1>
+      <h1>🎉 Picture Party 2</h1>
       <div class="buttons">
         
         <button id="spinBtn" type="button">🎲 Spin</button>
