--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>🎲 Hand in Hand 1-4 | Game Zone</title>
-
+<meta content="noindex, nofollow" name="robots"/>
 <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&family=Nunito:wght@400;700;900&display=swap" rel="stylesheet">
 <link rel="icon" type="image/png" sizes="32x32"
       href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
@@ -437,3 +437,4 @@
 
 </body>
 </html>
+
