--- a/game-zone-hh5-6.html
+++ b/game-zone-hh5-6.html
@@ -401,7 +401,7 @@
           <div class="body">
             <div class="text">
               <h3>Word Association</h3>
-              <p>One student says a word, and the next quickly says a word that’s related. Keep going around without repeating or hesitating. Great for vocabulary building, quick thinking, and making language connections!</p>
+            <p>One student says any word, and the next quickly says a word that’s related. Keep going through all the students without repeating or hesitating. Great for vocabulary building, quick thinking, and making language connections!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -718,3 +718,4 @@
 
 </body>
 </html>
+
