--- a/20questions1.html
+++ b/20questions1.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Twenty Questions 1</title>
+  <meta content="noindex, nofollow" name="robots"/>
+<link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@700&family=Nunito:wght@400;700;900&display=swap" rel="stylesheet">
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
   <style>
     body {
       margin: 0;
