--- a/description-detective1.html
+++ b/description-detective1.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <title>Description Detective 1</title>
+      <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
   <style>
     body {
       font-family: Arial, sans-serif;
