--- a/english-tennis.html
+++ b/english-tennis.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>English Tennis</title>
+      <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
   <style>
     body {
       font-family: sans-serif;
@@ -65,4 +70,5 @@
   </script>
 </body>
 </html>
+
 
