--- a/hh1u5-8-spinner.html
+++ b/hh1u5-8-spinner.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <title>🔴 HH1 Units 5-8 Bingo Spinner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
   <style>
     * {
       box-sizing: border-box;
