--- a/hh2u1-4-spinner.html
+++ b/hh2u1-4-spinner.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>🔴 HH2 Units 1-4 Bingo Spinner</title>
+      <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
