--- a/hh2u10-games.html
+++ b/hh2u10-games.html
@@ -5,6 +5,11 @@
 <head>
 <meta charset="utf-8"/>
 <title>🃏 HH2 Unit 10 Game Hub</title>
+        <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
 <style>
     html, body {
       margin: 0;
