--- a/hh2u5-games.html
+++ b/hh2u5-games.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>🃏 HH2 Unit 5 Game Hub</title>
+      <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
   <style>
     html, body {
       margin: 0;
