--- a/hh3u9-12-bingo.html
+++ b/hh3u9-12-bingo.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>🅱️ HH3 Units 9-12 Bingo</title>
+        <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
     <style>
         * {
             box-sizing: border-box;
