--- a/hh3u9-12-spinner.html
+++ b/hh3u9-12-spinner.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <title>🔴 HH3 Units 9–12 Bingo Spinner</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
   <style>
     * {
       box-sizing: border-box;
