--- a/hhgames.html
+++ b/hhgames.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset='UTF-8'>
   <title>🎲 HH Games by Level</title>
+      <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; background: #f9f9f9; }
     h1 { text-align: center; margin-bottom: 40px; }
