--- a/madgab.html
+++ b/madgab.html
@@ -4,6 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Mad Gab</title>
+      <meta content="noindex, nofollow" name="robots"/>
+<link rel="icon" type="image/png" sizes="32x32"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
+<link rel="icon" type="image/png" sizes="16x16"
+      href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
   <style>
     body {
       background: url('https://github.com/Outreach360-Inc/games/blob/main/madgab.png?raw=true') no-repeat center center fixed;
