--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -144,7 +144,7 @@
   <header class="topbar">
     <div class="wrap">
       <div class="bar">
-        <a href="https://outreach360-inc.github.io/games/game-zone.html"><button class="home-badge" aria-label="Home" type="button">
+        <a href="https://outreach360-inc.github.io/games/"><button class="home-badge" aria-label="Home" type="button">
           <svg viewBox="0 0 24 24" fill="none" aria-hidden="true">
             <path d="M3 10.5 12 3l9 7.5" stroke="#fff" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/>
             <path d="M5.5 9.5V20h13V9.5" stroke="#fff" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -801,4 +801,5 @@
 
 </body>
 </html>
+
 
