--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -356,27 +356,24 @@
           </div>
         </article>
 
-
-
-<article class="card">
+      
+      <article class="card">
           <div class="body">
             <div class="text">
-              <h3>Story Cubes 2</h3>
-              <p>Roll the virtual dice to reveal words, then create a story using all of them! Students can tell the story solo or as a group, adding on one sentence at a time. A fun way to spark imagination, storytelling, and vocabulary use!</p>
+              <h3>Let's Talk</h3>
+              <p>Spin for a discussion question to get students speaking! Some questions are personal, others may require quick research, reasoning, or creativity.Great for practicing fluency, idea development, critical thinking, and speaking confidence!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
                 <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/story-cubes2-icon.png?raw=true"
-                  alt="Story Cubes 2 icon"
+                  src="https://github.com/Outreach360-Inc/games/blob/main/lets-talk-icon.png?raw=true"
+                  alt="Let's Talk icon"
                   loading="lazy" decoding="async">
               </div>
-              <a href="https://outreach360-inc.github.io/games/story-cubes2.html" target="_blank"><button class="play-btn">PLAY</button></a>
+              <a href="https://outreach360-inc.github.io/games/lets-talk.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
-      
-
 
       <article class="card">
           <div class="body">
@@ -396,6 +393,23 @@
           </div>
         </article>
 
+            <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Story Cubes 2</h3>
+              <p>Roll the virtual dice to reveal words, then create a story using all of them! Students can tell the story solo or as a group, adding on one sentence at a time. A fun way to spark imagination, storytelling, and vocabulary use!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/story-cubes2-icon.png?raw=true"
+                  alt="Story Cubes 2 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/story-cubes2.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
         <article class="card">
           <div class="body">
@@ -930,5 +944,6 @@
 
 </body>
 </html>
+
 
 
