--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -397,7 +397,7 @@
           <div class="body">
             <div class="text">
               <h3>Story Cubes 2</h3>
-              <p>Roll the virtual dice to reveal words, then create a story using all of them! Students can tell the story solo or as a group, adding on one sentence at a time. A fun way to spark imagination, storytelling, and vocabulary use!</p>
+              <p>Roll the virtual dice to reveal words, then create a story using all of them! Students can tell the story solo, in pairs, or as a group, adding on one sentence at a time. A fun way to spark imagination, storytelling, and vocabulary use!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -407,6 +407,25 @@
                   loading="lazy" decoding="async">
               </div>
               <a href="https://outreach360-inc.github.io/games/story-cubes2.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+
+                <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Genre Lab 2</h3>
+              <p>Students experiment with different genres of fiction through creative writing challenges! Spin for a genre and choose a writing mode: solo story, pairwork, or chain story (each student in a group takes turns writing a sentence). Focus on genre-specific style, tone, and structure while developing key skills like brainstorming, organization, and audience awareness. Great for reinforcing genre features, narrative techniques, and creative writing fluency—with lots of room for imagination and fun!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/genre-lab2-icon.png?raw=true"
+                  alt="Genre Lab 2 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/genre-lab2.html" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -944,6 +963,7 @@
 
 </body>
 </html>
+
 
 
 
