--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -416,7 +416,7 @@
           <div class="body">
             <div class="text">
               <h3>Genre Lab 2</h3>
-              <p>Students experiment with different genres of fiction through creative writing challenges! Spin for a genre and choose a writing mode: solo story, pairwork, or chain story (each student in a group takes turns writing a sentence). Focus on genre-specific style, tone, and structure while developing key skills like brainstorming, organization, and audience awareness. Great for reinforcing genre features, narrative techniques, and creative writing fluency—with lots of room for imagination and fun!</p>
+              <p>Students experiment with different fiction genres through creative writing challenges! Spin for a genre and choose your mode: solo, pairs, or chain story (taking turns sentence by sentence). Great for practicing genre-specific style, tone, and structure while building key writing skills—with plenty of room for imagination and fun!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -963,6 +963,7 @@
 
 </body>
 </html>
+
 
 
 
