--- a/genre-lab2.html
+++ b/genre-lab2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Genre Lab 2 Spinner</title>
+  <title>Genre Lab 2</title>
   <meta name="robots" content="noindex, nofollow">
   <link rel="icon" type="image/png" sizes="32x32" href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
   <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/Outreach360-Inc/games/raw/main/favicon.png">
@@ -89,3 +89,4 @@
   </script>
 </body>
 </html>
+
