--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -242,26 +242,6 @@
         </article>
 
 
-
-      <article class="card">
-          <div class="body">
-            <div class="text">
-              <h3>Talk for a Minute / One-Minute Story</h3>
-              <p>Spin for a topic or use one from your unit. Students take turns speaking for one full minute. You can use the same topic for the whole group or spin a new one for each student. Great for speaking fluency, confidence, and organizing ideas under pressure!</p>
-            </div>
-            <div class="art-col">
-              <div class="art-frame">
-                <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/minute-icon.png?raw=true"
-                  alt="Talk for a Minute / One-Minute Story icon"
-                  loading="lazy" decoding="async">
-              </div>
-              <a href="https://outreach360-inc.github.io/games/talk-minute.html" target="_blank"><button class="play-btn">PLAY</button></a>
-            </div>
-          </div>
-        </article>
-
-
 <article class="card">
           <div class="body">
             <div class="text">
@@ -280,7 +260,43 @@
           </div>
         </article>
       
+  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Genre Lab 1</h3>
+              <p>Students explore different types of stories—like fairy tales, mysteries, or adventures—by spinning for a genre and writing their own! They can work alone or take turns building a group story one sentence at a time. A fun way to build creativity, vocabulary, and story-writing skills!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/genre-lab1-icon.png?raw=true"
+                  alt="Genre Lab 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/genre-lab1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
+
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Talk for a Minute / One-Minute Story</h3>
+              <p>Spin for a topic or use one from your unit. Students take turns speaking for one full minute. You can use the same topic for the whole group or spin a new one for each student. Great for speaking fluency, confidence, and organizing ideas under pressure!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/minute-icon.png?raw=true"
+                  alt="Talk for a Minute / One-Minute Story icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/talk-minute.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+            
       <article class="card">
           <div class="body">
             <div class="text">
@@ -801,5 +817,6 @@
 
 </body>
 </html>
+
 
 
