--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -218,24 +218,6 @@
           </div>
         </article>
 
-        <article class="card">
-          <div class="body">
-            <div class="text">
-              <h3>Odd One Out 1</h3>
-              <p>Spin for set of words. Students must decide which one doesn’t belong—and explain why! While only one answer is indicated, multiple correct answers are acceptable as long as students can support their reasoning. Great for critical thinking, comparison skills, and vocabulary. <strong>Show pictures of each item to support lower levels.</strong></p>
-            </div>
-            <div class="art-col">
-              <div class="art-frame">
-                <img
-                  src="https://github.com/Outreach360-Inc/games/blob/main/odd-icon.png?raw=true"
-                  alt="Odd One Out icon"
-                  loading="lazy" decoding="async">
-              </div>
-              <a href="https://outreach360-inc.github.io/games/odd1.html" target="_blank"><button class="play-btn">PLAY</button></a>
-            </div>
-          </div>
-        </article>
-
    
         <article class="card">
           <div class="body">
@@ -256,6 +238,44 @@
         </article>
 
 
+                    <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Chain Story</h3>
+              <p>Work together to build a fun and silly story—one sentence at a time! Students take turns adding to the story, listening carefully and using their imagination to keep it going.Great for practicing speaking, writing, sequencing, and collaboration!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/chain-story-icon.png?raw=true"
+                  alt="Chain Story icon"
+                  loading="lazy" decoding="async">
+              </div>
+               <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+            </div>
+          </div>
+        </article>
+
+            
+        <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Odd One Out 1</h3>
+              <p>Spin for set of words. Students must decide which one doesn’t belong—and explain why! While only one answer is indicated, multiple correct answers are acceptable as long as students can support their reasoning. Great for critical thinking, comparison skills, and vocabulary. <strong>Show pictures of each item to support lower levels.</strong></p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/odd-icon.png?raw=true"
+                  alt="Odd One Out icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://outreach360-inc.github.io/games/odd1.html" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+            
         <article class="card">
           <div class="body">
             <div class="text">
@@ -437,5 +457,6 @@
 
 </body>
 </html>
+
 
 
