--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -333,6 +333,24 @@
         </article>
 
 
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Hangman</h3>
+            <p>A classic spelling and vocabulary game! Use the Hand in Hand Scope & Sequence to choose a word your students know and draw blanks for each letter. Students guess letters one at a time—if they’re right, fill them in; if not, draw a part of the hangman. <strong>After each round, have students make a sentence using the word.</strong> Great for spelling, letter recognition, vocabulary review, and logical thinking.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/hangman-icon.png?raw=true"
+                  alt="Hangman icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://drive.google.com/drive/folders/1MarYnf6LypvPZWXxxh-7jco3b57Rrxjc?usp=drive_link" target="_blank"><button class="play-btn">Scope & Sequence</button></a>
+            </div>
+          </div>
+        </article>
+
         <article class="card">
           <div class="body">
             <div class="text">
@@ -457,6 +475,7 @@
 
 </body>
 </html>
+
 
 
 
