--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -332,7 +332,43 @@
           </div>
         </article>
 
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Charades 1</h3>
+              <p>Act it out—no speaking allowed! <strong>Use the Hand in Hand Scope & Sequence to choose a word your students have learned</strong> and send it privately to one student. They act it out while others guess. <strong>After each round, have students make a sentence using the word.</strong> Great for vocabulary review, body language, and confident communication in a fun, active way!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/charades1-icon.png?raw=true"
+                  alt="Charades 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://drive.google.com/drive/folders/1MarYnf6LypvPZWXxxh-7jco3b57Rrxjc?usp=drive_link" target="_blank"><button class="play-btn">Scope & Sequence</button></a>
+            </div>
+          </div>
+        </article>
 
+
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Pictionary 1</h3>
+              <p>Draw it—no words or letters allowed! <strong>Use the Hand in Hand Scope & Sequence to choose a word your students have learned</strong> and send it privately to one student. They draw it while others guess. <strong>After each round, have students make a sentence using the word.</strong> Great for vocabulary review, visual thinking, and confident communication in a fun, creative way!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/pictionary1-icon.png?raw=true"
+                  alt="Pictionary 1 icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://drive.google.com/drive/folders/1MarYnf6LypvPZWXxxh-7jco3b57Rrxjc?usp=drive_link" target="_blank"><button class="play-btn">Scope & Sequence</button></a>
+            </div>
+          </div>
+        </article>
+            
                   <article class="card">
           <div class="body">
             <div class="text">
@@ -475,6 +511,7 @@
 
 </body>
 </html>
+
 
 
 
