--- a/game-zone-hh1-4.html
+++ b/game-zone-hh1-4.html
@@ -373,7 +373,7 @@
           <div class="body">
             <div class="text">
               <h3>Hangman</h3>
-            <p>A classic spelling and vocabulary game! Use the Hand in Hand Scope & Sequence to choose a word your students know and draw blanks for each letter. Students guess letters one at a time—if they’re right, fill them in; if not, draw a part of the hangman. <strong>After each round, have students make a sentence using the word.</strong> Great for spelling, letter recognition, vocabulary review, and logical thinking.</p>
+            <p>A classic spelling and vocabulary game! <strong>Use the Hand in Hand Scope & Sequence to choose a word your students have learned</strong> and draw blanks for each letter. Students guess letters one at a time—if they’re right, fill them in; if not, draw a part of the hangman. <strong>After each round, have students make a sentence using the word.</strong> Great for spelling, letter recognition, vocabulary review, and logical thinking.</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -511,6 +511,7 @@
 
 </body>
 </html>
+
 
 
 
