--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -892,7 +892,29 @@
         </article>
 
 
-
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Wordle</h3>
+              <p>Guess the Wordle in 6 tries. Each guess must be a valid 5-letter word. The color of the tiles will change to show how close your guess was to the word.</p>
+              <ul>
+                    <li>🟩 Green = correct letter & position</li>
+<li>🟨 Yellow = correct letter, wrong position</li>
+<li>⬜ Gray = letter not in the word</li>
+                    <p>Great for spelling, vocabulary recall, logical thinking, and word structure!</p>
+              </ul>    
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/wordle-icon.png?raw=true"
+                  alt="Wordle icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://wordly.org" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
       <article class="card">
           <div class="body">
@@ -963,6 +985,7 @@
 
 </body>
 </html>
+
 
 
 
