--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -708,7 +708,17 @@
         </article>
 
 
-
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Wordle</h3>
+              <p>Guess the Wordle in 6 tries. Each guess must be a valid 5-letter word. The color of the tiles will change to show how close your guess was to the word.</p>
+              <ul>
+                    <li>🟩 Green = correct letter & position</li>
+<li>🟨 Yellow = correct letter, wrong position</li>
+<li>⬜ Gray = letter not in the word</li>
+                    </ul>  
+                    <p>Great for spelling, vocabulary recall, logical thinking, and word structure!</p>
 
       <article class="card">
           <div class="body">
@@ -817,6 +827,7 @@
 
 </body>
 </html>
+
 
 
 
