--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -921,7 +921,7 @@
           <div class="body">
             <div class="text">
               <h3>Word Ladder</h3>
-              <p>Start with a simple word (like cat) and try to reach a target word (like dog) by changing one letter at a time. Each step must form a real word (e.g., cat → cot → dot → dog). Play together on the board. You can adjust the difficulty by changing word length or limiting the number of steps. Great for spelling, vocabulary, and logical thinking!</p>
+              <p>Weave your way from the start word to the end word. Each word you enter can only change 1 letter from the word above it. Play online or create your own. Great for spelling, vocabulary, and logical thinking!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -930,7 +930,7 @@
                   alt="Word Ladder icon"
                   loading="lazy" decoding="async">
               </div>
-              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+                            <a href="https://weavergame.org" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -986,6 +986,7 @@
 
 </body>
 </html>
+
 
 
 
