--- a/game-zone-discover.html
+++ b/game-zone-discover.html
@@ -720,11 +720,11 @@
                     </ul>  
                     <p>Great for spelling, vocabulary recall, logical thinking, and word structure!</p>
 
-      <article class="card">
+                      <article class="card">
           <div class="body">
             <div class="text">
               <h3>Word Ladder</h3>
-              <p>Start with a simple word (like cat) and try to reach a target word (like dog) by changing one letter at a time. Each step must form a real word (e.g., cat → cot → dot → dog). Play together on the board. You can adjust the difficulty by changing word length or limiting the number of steps. Great for spelling, vocabulary, and logical thinking!</p>
+              <p>Weave your way from the start word to the end word. Each word you enter can only change 1 letter from the word above it. Play online (you can change the settings for unlimited games) or create your own with a 3-letter word to make it easier. Great for spelling, vocabulary, and logical thinking!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -733,7 +733,7 @@
                   alt="Word Ladder icon"
                   loading="lazy" decoding="async">
               </div>
-              <p style="color: #ff6729;" align="center"><strong>THIS GAME DOES NOT REQUIRE ANY MATERIALS</strong></p>
+                            <a href="https://weavergame.org" target="_blank"><button class="play-btn">PLAY</button></a>
             </div>
           </div>
         </article>
@@ -827,6 +827,7 @@
 
 </body>
 </html>
+
 
 
 
