--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -917,11 +917,11 @@
           </div>
         </article>
 
-      <article class="card">
+                            <article class="card">
           <div class="body">
             <div class="text">
               <h3>Word Ladder</h3>
-              <p>Weave your way from the start word to the end word. Each word you enter can only change 1 letter from the word above it. Play online or create your own. Great for spelling, vocabulary, and logical thinking!</p>
+              <p>Weave your way from the start word to the end word. Each word you enter can only change 1 letter from the word above it. Play online (you can change the settings for unlimited games) or create your own with a 3-letter word to make it easier. Great for spelling, vocabulary, and logical thinking!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -986,6 +986,7 @@
 
 </body>
 </html>
+
 
 
 
