--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -895,6 +895,25 @@
       <article class="card">
           <div class="body">
             <div class="text">
+              <h3>Combinations</h3>
+              <p>Create words using combinations of letters from the grid and try to get the maximum score. Words can consist of two, three or four combinations.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/combinations-icon.png?raw=true"
+                  alt="Combinations icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://combinations.org" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+            
+      <article class="card">
+          <div class="body">
+            <div class="text">
               <h3>Wordle</h3>
               <p>Guess the Wordle in 6 tries. Each guess must be a valid 5-letter word. The color of the tiles will change to show how close your guess was to the word.</p>
               <ul>
@@ -986,6 +1005,7 @@
 
 </body>
 </html>
+
 
 
 
