--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -896,7 +896,7 @@
           <div class="body">
             <div class="text">
               <h3>Combinations</h3>
-              <p>Create words using combinations of letters from the grid and try to get the maximum score. Words can consist of two, three or four combinations.</p>
+              <p>Create words using combinations of letters from the grid and try to get the maximum score. Words can consist of two, three or four combinations. Great for spelling, vocabulary recall, logical thinking, and word structure!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1005,6 +1005,7 @@
 
 </body>
 </html>
+
 
 
 
