--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -892,6 +892,25 @@
         </article>
 
 
+                  <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>SpellBee</h3>
+              <p>Create words using letters from the hive and try to get the maximum score. Words must have at least four letters. Words must include the center letter. Letters can be used more than once.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/spell-bee-icon.png?raw=true"
+                  alt="SpellBee icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://spellbee.org" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+            
       <article class="card">
           <div class="body">
             <div class="text">
@@ -1005,6 +1024,7 @@
 
 </body>
 </html>
+
 
 
 
