--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -896,7 +896,7 @@
           <div class="body">
             <div class="text">
               <h3>SpellBee</h3>
-              <p>Create words using letters from the hive and try to get the maximum score. Words must have at least four letters. Words must include the center letter. Letters can be used more than once.</p>
+              <p>Create words using letters from the hive and try to get the maximum score. Words must have at least four letters. Words must include the center letter. Letters can be used more than once. A great way to practice spelling and vocabulary!</p>
             </div>
             <div class="art-col">
               <div class="art-frame">
@@ -1024,6 +1024,7 @@
 
 </body>
 </html>
+
 
 
 
