--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -815,6 +815,26 @@
           </div>
         </article>
 
+
+                 <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Connections</h3>
+              <p>Collect 4 groups of four words that have a common connection without making more than 4 mistakes. Comes in 3 levels of difficulty. Great for critical thinking, comparison skills, and vocabulary.</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/connections-icon.png?raw=true"
+                  alt="Connections icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="https://connections.gg" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
+
+            
         <article class="card">
           <div class="body">
             <div class="text">
@@ -833,7 +853,7 @@
           </div>
         </article>
 
-
+            
       <article class="card">
           <div class="body">
             <div class="text">
@@ -1024,6 +1044,7 @@
 
 </body>
 </html>
+
 
 
 
