--- a/game-zone-futures.html
+++ b/game-zone-futures.html
@@ -1017,7 +1017,25 @@
           </div>
         </article>
 
+      <article class="card">
+          <div class="body">
+            <div class="text">
+              <h3>Globe</h3>
+              <p>Every day, there is a new Mystery Country. Your goal is to guess the mystery country using the fewest number of guesses. Each incorrect guess will appear on the globe with a colour indicating how close it is to the Mystery Country. The hotter the colour, the closer you are to the answer. Great for geography practice and critical thinking!</p>
+            </div>
+            <div class="art-col">
+              <div class="art-frame">
+                <img
+                  src="https://github.com/Outreach360-Inc/games/blob/main/globe-icon.png?raw=true"
+                  alt="Globe icon"
+                  loading="lazy" decoding="async">
+              </div>
+              <a href="globle.org" target="_blank"><button class="play-btn">PLAY</button></a>
+            </div>
+          </div>
+        </article>
 
+            
 
       <article class="card">
           <div class="body">
@@ -1044,6 +1062,7 @@
 
 </body>
 </html>
+
 
 
 
